Issue 1479: Horizontal scroll bar appears and disappears when scrolling vertically in script tab (contribution by kpdecker)
http://code.google.com/p/fbug/source/detail?r=1981

--- a/extension/skin/classic/debugger.css
+++ b/extension/skin/classic/debugger.css
@@ -20,8 +20,8 @@
 /************************************************************************************************/
 
 .sourceBox {
-    overflow: auto;
-    position: absolute;
+    overflow: scroll; /* see issue 1479 */
+     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
